# TickDeck

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CLAW_CODE_ANALYSIS.md  CODE_REVIEW.md  DESIGN.md  DESIGN_COVER_TEMPLATE.md  DESIGN_REVIEW_2026-03-30.md  NEXT_STEPS.md  PLAN_PYTHON_PPTX.md  QA_SCENARIO_2026-03-31.md  README.md  REVIEW_2026-03-30.md  ROADMAP.md  SLIDE_DESIGN_REVIEW.md  TEST_CHECKLIST.md  app.py  app.py.bak  celery_app.py  docker-compose.yml  extensions.py  i18n.py  index.parent.html  package-lock.json  package.json  playwright.config.js  pw_final_check.txt  pw_results.txt  report.json  requirements.txt  results.json  stitch_generate.js  test_contact.pptx  test_cta.pptx  tickdeck.code-workspace  web_to_slide_v4_backup.py  제대리_Critical수정_지시서.md
backend/: alembic.ini  main.py  requirements.txt
docs/: PPT_아카이브_인벤토리_2026-04-20.md  PRD.md  design_prompts_premium.md  차별화_포지션_2026-04-20.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
routes/: __init__.py  admin.py  api.py  auth.py  pages.py
scripts/: create_template.py  preview_all_slides.py  test_image_gen.py  test_pptx.py  test_pptx_v2.py
shared/: pyproject.toml
shared/shared/: __init__.py  crawler.py  gemini_client.py  pptx_builder.py  quality.py  schemas.py
static/: robots.txt  sitemap.xml  stitch_templates.json
templates/: admin.html  coming_soon.html  index.html  index.prev.html  index.previous.html  index_en.html  landing.html  landing_en.html
tests/: 01-access-i18n.spec.js  02-security.spec.js  test_auth.py  (+3 more)
(+58 files in other folders)
