[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tickdeck-shared"
version = "0.1.0"
description = "TickDeck 공유 서비스 (crawler, gemini, pptx_builder)"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
